--- a/MacDown/Localization/sv.lproj/MPMarkdownPreferencesViewController.strings
+++ b/MacDown/Localization/sv.lproj/MPMarkdownPreferencesViewController.strings
@@ -1,33 +1,20 @@
-
 /* Class = "NSButtonCell"; title = "Footnote"; ObjectID = "0yU-vT-72e"; */
-"0yU-vT-72e.title" = "Footnote";
+"0yU-vT-72e.title" = "Fotnot";
 
 /* Class = "NSButtonCell"; title = "Quote"; ObjectID = "2lB-hq-5eX"; */
-"2lB-hq-5eX.title" = "Quote";
-
-/* Class = "NSButtonCell"; title = "Highlight"; ObjectID = "8kI-gm-5Lo"; */
-"8kI-gm-5Lo.title" = "Highlight";
-
-/* Class = "NSButtonCell"; title = "Intra-word emphasis"; ObjectID = "D7l-nP-P0y"; */
-"D7l-nP-P0y.title" = "Intra-word emphasis";
-
-/* Class = "NSButtonCell"; title = "Fenced code block"; ObjectID = "ELg-sx-vIf"; */
-"ELg-sx-vIf.title" = "Fenced code block";
+"2lB-hq-5eX.title" = "Citat";
 
 /* Class = "NSButtonCell"; title = "Underline"; ObjectID = "Gdr-Ro-ZnW"; */
-"Gdr-Ro-ZnW.title" = "Underline";
+"Gdr-Ro-ZnW.title" = "Understrykning";
 
 /* Class = "NSButtonCell"; title = "Strikethrough"; ObjectID = "RjP-zE-c6b"; */
-"RjP-zE-c6b.title" = "Strikethrough";
-
-/* Class = "NSButtonCell"; title = "Autolink"; ObjectID = "Roe-rh-8f9"; */
-"Roe-rh-8f9.title" = "Autolink";
+"RjP-zE-c6b.title" = "Genomstrykning";
 
 /* Class = "NSBox"; title = "Block formatting"; ObjectID = "TXy-fD-S4Y"; */
-"TXy-fD-S4Y.title" = "Block formatting";
+"TXy-fD-S4Y.title" = "Block-formattering";
 
 /* Class = "NSBox"; title = "Inline formatting"; ObjectID = "Ycc-Px-jbu"; */
-"Ycc-Px-jbu.title" = "Inline formatting";
+"Ycc-Px-jbu.title" = "Inline-formattering";
 
 /* Class = "NSButtonCell"; title = "Smartypants"; ObjectID = "aSK-nR-xMr"; */
 "aSK-nR-xMr.title" = "Smartypants";
@@ -36,7 +23,8 @@
 "k2n-VN-cKT.title" = "Superscript";
 
 /* Class = "NSBox"; title = "Document formatting"; ObjectID = "x36-52-U0p"; */
-"x36-52-U0p.title" = "Document formatting";
+"x36-52-U0p.title" = "Dokument-formattering";
 
 /* Class = "NSButtonCell"; title = "Table"; ObjectID = "z8g-3M-hbc"; */
-"z8g-3M-hbc.title" = "Table";
+"z8g-3M-hbc.title" = "Tabell";
+
