--- a/MacDown/Localization/zh-Hans.lproj/InfoPlist.strings
+++ b/MacDown/Localization/zh-Hans.lproj/InfoPlist.strings
@@ -1,2 +1,3 @@
-/* Localized versions of Info.plist keys */
+/* (No Commment) */
+"NSHumanReadableCopyright" = "Copyright © 2014–2016 Tzu-ping Chung.";
 
