--- a/MacDown/Localization/zh-Hans.lproj/MPEditorPreferencesViewController.strings
+++ b/MacDown/Localization/zh-Hans.lproj/MPEditorPreferencesViewController.strings
@@ -1,72 +1,36 @@
-
-/* Class = "NSTextFieldCell"; title = "List marker:"; ObjectID = "0Bc-iD-VCh"; */
-"0Bc-iD-VCh.title" = "List marker:";
-
 /* Class = "NSButtonCell"; title = "⌘← jumps to first non-whitespace character in line"; ObjectID = "2Yf-FT-MDH"; */
-"2Yf-FT-MDH.title" = "⌘← jumps to first non-whitespace character in line";
+"2Yf-FT-MDH.title" = "⌘← 跳至本行的第一个非空白字符";
 
 /* Class = "NSMenuItem"; title = "- (Minus sign)"; ObjectID = "2yJ-j5-PLm"; */
-"2yJ-j5-PLm.title" = "- (Minus sign)";
-
-/* Class = "NSBox"; title = "Behavior"; ObjectID = "6JP-Pc-JFd"; */
-"6JP-Pc-JFd.title" = "Behavior";
-
-/* Class = "NSButtonCell"; title = "Change…"; ObjectID = "8bz-cc-gLF"; */
-"8bz-cc-gLF.title" = "Change…";
+"2yJ-j5-PLm.title" = "- (减号)";
 
 /* Class = "NSButtonCell"; title = "Ensure newline at end of file on save"; ObjectID = "9Wp-5V-GeQ"; */
-"9Wp-5V-GeQ.title" = "Ensure newline at end of file on save";
-
-/* Class = "NSMenuItem"; title = "Item 2"; ObjectID = "BmJ-Oh-va6"; */
-"BmJ-Oh-va6.title" = "Item 2";
-
-/* Class = "NSTextFieldCell"; title = "Text insets:"; ObjectID = "Ee6-Cj-SWW"; */
-"Ee6-Cj-SWW.title" = "Text insets:";
+"9Wp-5V-GeQ.title" = "在保存时确保文末有换行符";
 
 /* Class = "NSSegmentedCell"; GHX-3h-1HI.ibShadowedLabels[0] = "Reveal"; ObjectID = "GHX-3h-1HI"; */
-"GHX-3h-1HI.ibShadowedLabels[0]" = "Reveal";
+"GHX-3h-1HI.ibShadowedLabels[0]" = "文件夹";
 
 /* Class = "NSSegmentedCell"; GHX-3h-1HI.ibShadowedLabels[1] = "Reload"; ObjectID = "GHX-3h-1HI"; */
-"GHX-3h-1HI.ibShadowedLabels[1]" = "Reload";
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "Ia1-VG-EWI"; */
-"Ia1-VG-EWI.title" = "OtherViews";
+"GHX-3h-1HI.ibShadowedLabels[1]" = "重新加载";
 
 /* Class = "NSTextFieldCell"; title = "Line spacing:"; ObjectID = "InD-Fc-CTS"; */
-"InD-Fc-CTS.title" = "Line spacing:";
-
-/* Class = "NSButtonCell"; title = "Auto-increment numbering in ordered lists"; ObjectID = "UPm-G1-Bc6"; */
-"UPm-G1-Bc6.title" = "Auto-increment numbering in ordered lists";
-
-/* Class = "NSButtonCell"; title = "Insert spaces instead of tabs"; ObjectID = "XSN-mi-gbk"; */
-"XSN-mi-gbk.title" = "Insert spaces instead of tabs";
+"InD-Fc-CTS.title" = "行间距";
 
 /* Class = "NSButtonCell"; title = "Limit editor width to"; ObjectID = "bhL-NA-9No"; */
-"bhL-NA-9No.title" = "Limit editor width to";
+"bhL-NA-9No.title" = "限制编辑窗口最大宽度为：";
 
 /* Class = "NSMenuItem"; title = "* (Asterisk)"; ObjectID = "bnJ-BQ-mHV"; */
-"bnJ-BQ-mHV.title" = "* (Asterisk)";
+"bnJ-BQ-mHV.title" = "* (星号)";
 
 /* Class = "NSTextFieldCell"; title = "Base font:"; ObjectID = "eXF-SL-hBq"; */
-"eXF-SL-hBq.title" = "Base font:";
+"eXF-SL-hBq.title" = "默认字体：";
 
 /* Class = "NSTextFieldCell"; title = "×"; ObjectID = "g5w-Qw-Khw"; */
 "g5w-Qw-Khw.title" = "×";
 
-/* Class = "NSButtonCell"; title = "Scroll past end"; ObjectID = "nBR-LK-G9a"; */
-"nBR-LK-G9a.title" = "Scroll past end";
-
-/* Class = "NSButtonCell"; title = "Auto-complete matching characters"; ObjectID = "o4K-iG-sGA"; */
-"o4K-iG-sGA.title" = "Auto-complete matching characters";
-
-/* Class = "NSMenuItem"; title = "Item 3"; ObjectID = "qML-FL-WrV"; */
-"qML-FL-WrV.title" = "Item 3";
-
 /* Class = "NSTextFieldCell"; title = "Theme:"; ObjectID = "vA9-IT-8Z7"; */
-"vA9-IT-8Z7.title" = "Theme:";
-
-/* Class = "NSButtonCell"; title = "Automatically insert line prefix for the current block"; ObjectID = "zGb-kg-2CJ"; */
-"zGb-kg-2CJ.title" = "Automatically insert line prefix for the current block";
+"vA9-IT-8Z7.title" = "主题：";
 
 /* Class = "NSMenuItem"; title = "+ (Plus sign)"; ObjectID = "zX4-JY-wTT"; */
-"zX4-JY-wTT.title" = "+ (Plus sign)";
+"zX4-JY-wTT.title" = "+ (加号)";
+
