--- a/MacDown/Localization/zh-Hans.lproj/MPGeneralPreferencesViewController.strings
+++ b/MacDown/Localization/zh-Hans.lproj/MPGeneralPreferencesViewController.strings
@@ -1,27 +1,12 @@
-
 /* Class = "NSButtonCell"; title = "Sync preview scrollbar when editor scrolls"; ObjectID = "2Uj-Sx-FjV"; */
-"2Uj-Sx-FjV.title" = "Sync preview scrollbar when editor scrolls";
-
-/* Class = "NSBox"; title = "Behavior"; ObjectID = "Nma-PL-ZvX"; */
-"Nma-PL-ZvX.title" = "Behavior";
+"2Uj-Sx-FjV.title" = "预览窗口同步滚动";
 
 /* Class = "NSButtonCell"; title = "Put editor on the right"; ObjectID = "bUn-PQ-5Ez"; */
-"bUn-PQ-5Ez.title" = "Put editor on the right";
+"bUn-PQ-5Ez.title" = "编辑窗口置于右侧";
 
 /* Class = "NSBox"; title = "Update"; ObjectID = "eLn-fW-Agu"; */
-"eLn-fW-Agu.title" = "Update";
-
-/* Class = "NSButtonCell"; title = "Automatically create files for link targets"; ObjectID = "hpF-zP-3cM"; */
-"hpF-zP-3cM.title" = "Automatically create files for link targets";
-
-/* Class = "NSButtonCell"; title = "Ensure open document on launch"; ObjectID = "l9N-wk-WRY"; */
-"l9N-wk-WRY.title" = "Ensure open document on launch";
-
-/* Class = "NSButtonCell"; title = "Update preview automatically as you type"; ObjectID = "npz-xj-plX"; */
-"npz-xj-plX.title" = "Update preview automatically as you type";
-
-/* Class = "NSButtonCell"; title = "Show word count"; ObjectID = "oeW-bF-ybW"; */
-"oeW-bF-ybW.title" = "Show word count";
+"eLn-fW-Agu.title" = "更新";
 
 /* Class = "NSButtonCell"; title = "Include pre-releases"; ObjectID = "vbz-fv-8BX"; */
-"vbz-fv-8BX.title" = "Include pre-releases";
+"vbz-fv-8BX.title" = "包括预发行版本";
+
