--- a/MacDown/Localization/de.lproj/MPMarkdownPreferencesViewController.strings
+++ b/MacDown/Localization/de.lproj/MPMarkdownPreferencesViewController.strings
@@ -1,3 +1,24 @@
 /* Class = "NSButtonCell"; title = "Footnote"; ObjectID = "0yU-vT-72e"; */
 "0yU-vT-72e.title" = "Fußnote";
 
+/* Class = "NSButtonCell"; title = "Quote"; ObjectID = "2lB-hq-5eX"; */
+"2lB-hq-5eX.title" = "Zitat";
+
+/* Class = "NSButtonCell"; title = "Underline"; ObjectID = "Gdr-Ro-ZnW"; */
+"Gdr-Ro-ZnW.title" = "Unterstrichen";
+
+/* Class = "NSButtonCell"; title = "Strikethrough"; ObjectID = "RjP-zE-c6b"; */
+"RjP-zE-c6b.title" = "Durchgestrichen";
+
+/* Class = "NSBox"; title = "Block formatting"; ObjectID = "TXy-fD-S4Y"; */
+"TXy-fD-S4Y.title" = "Blockformatierung";
+
+/* Class = "NSButtonCell"; title = "Smartypants"; ObjectID = "aSK-nR-xMr"; */
+"aSK-nR-xMr.title" = "Intelligente Anführungszeichen";
+
+/* Class = "NSButtonCell"; title = "Superscript"; ObjectID = "k2n-VN-cKT"; */
+"k2n-VN-cKT.title" = "Hochgestellt";
+
+/* Class = "NSButtonCell"; title = "Table"; ObjectID = "z8g-3M-hbc"; */
+"z8g-3M-hbc.title" = "Tabellen";
+
