--- a/MacDown/Localization/ja.lproj/InfoPlist.strings
+++ b/MacDown/Localization/ja.lproj/InfoPlist.strings
@@ -1,9 +1,1 @@
-/* (No Commment) */
-"CFBundleName" = "MacDown";
-
-/* (No Commment) */
-"CFBundleShortVersionString" = "0.1";
-
-/* (No Commment) */
-"NSHumanReadableCopyright" = "Copyright © 2014–2016 Tzu-ping Chung.";
-
+/* No Localized Strings */
