--- a/MacDown/Localization/zh-Hans.lproj/MPEditorPreferencesViewController.strings
+++ b/MacDown/Localization/zh-Hans.lproj/MPEditorPreferencesViewController.strings
@@ -1,11 +1,23 @@
+/* Class = "NSTextFieldCell"; title = "List marker:"; ObjectID = "0Bc-iD-VCh"; */
+"0Bc-iD-VCh.title" = "列表标记：";
+
 /* Class = "NSButtonCell"; title = "⌘← jumps to first non-whitespace character in line"; ObjectID = "2Yf-FT-MDH"; */
 "2Yf-FT-MDH.title" = "⌘← 跳至本行的第一个非空白字符";
 
 /* Class = "NSMenuItem"; title = "- (Minus sign)"; ObjectID = "2yJ-j5-PLm"; */
 "2yJ-j5-PLm.title" = "- (减号)";
 
+/* Class = "NSBox"; title = "Behavior"; ObjectID = "6JP-Pc-JFd"; */
+"6JP-Pc-JFd.title" = "行为";
+
+/* Class = "NSButtonCell"; title = "Change…"; ObjectID = "8bz-cc-gLF"; */
+"8bz-cc-gLF.title" = "更改⋯";
+
 /* Class = "NSButtonCell"; title = "Ensure newline at end of file on save"; ObjectID = "9Wp-5V-GeQ"; */
 "9Wp-5V-GeQ.title" = "在保存时确保文末有换行符";
+
+/* Class = "NSTextFieldCell"; title = "Text insets:"; ObjectID = "Ee6-Cj-SWW"; */
+"Ee6-Cj-SWW.title" = "文字内边距：";
 
 /* Class = "NSSegmentedCell"; GHX-3h-1HI.ibShadowedLabels[0] = "Reveal"; ObjectID = "GHX-3h-1HI"; */
 "GHX-3h-1HI.ibShadowedLabels[0]" = "文件夹";
@@ -15,6 +27,12 @@
 
 /* Class = "NSTextFieldCell"; title = "Line spacing:"; ObjectID = "InD-Fc-CTS"; */
 "InD-Fc-CTS.title" = "行间距";
+
+/* Class = "NSButtonCell"; title = "Auto-increment numbering in ordered lists"; ObjectID = "UPm-G1-Bc6"; */
+"UPm-G1-Bc6.title" = "Auto-increment numbering in ordered lists";
+
+/* Class = "NSButtonCell"; title = "Insert spaces instead of tabs"; ObjectID = "XSN-mi-gbk"; */
+"XSN-mi-gbk.title" = "Tab 键插入空格";
 
 /* Class = "NSButtonCell"; title = "Limit editor width to"; ObjectID = "bhL-NA-9No"; */
 "bhL-NA-9No.title" = "限制编辑窗口最大宽度为：";
@@ -28,8 +46,17 @@
 /* Class = "NSTextFieldCell"; title = "×"; ObjectID = "g5w-Qw-Khw"; */
 "g5w-Qw-Khw.title" = "×";
 
+/* Class = "NSButtonCell"; title = "Scroll past end"; ObjectID = "nBR-LK-G9a"; */
+"nBR-LK-G9a.title" = "允许滚动超过文档末尾";
+
+/* Class = "NSButtonCell"; title = "Auto-complete matching characters"; ObjectID = "o4K-iG-sGA"; */
+"o4K-iG-sGA.title" = "自动补全匹配字符";
+
 /* Class = "NSTextFieldCell"; title = "Theme:"; ObjectID = "vA9-IT-8Z7"; */
 "vA9-IT-8Z7.title" = "主题：";
+
+/* Class = "NSButtonCell"; title = "Automatically insert line prefix for the current block"; ObjectID = "zGb-kg-2CJ"; */
+"zGb-kg-2CJ.title" = "根据上下文自动插入行前缀";
 
 /* Class = "NSMenuItem"; title = "+ (Plus sign)"; ObjectID = "zX4-JY-wTT"; */
 "zX4-JY-wTT.title" = "+ (加号)";
