--- a/MacDown/Localization/zh-Hans.lproj/MPMarkdownPreferencesViewController.strings
+++ b/MacDown/Localization/zh-Hans.lproj/MPMarkdownPreferencesViewController.strings
@@ -1,9 +1,42 @@
+/* Class = "NSButtonCell"; title = "Footnote"; ObjectID = "0yU-vT-72e"; */
+"0yU-vT-72e.title" = "脚注";
+
+/* Class = "NSButtonCell"; title = "Quote"; ObjectID = "2lB-hq-5eX"; */
+"2lB-hq-5eX.title" = "引用";
+
 /* Class = "NSButtonCell"; title = "Highlight"; ObjectID = "8kI-gm-5Lo"; */
 "8kI-gm-5Lo.title" = "高亮";
+
+/* Class = "NSButtonCell"; title = "Intra-word emphasis"; ObjectID = "D7l-nP-P0y"; */
+"D7l-nP-P0y.title" = "Intra-word emphasis";
+
+/* Class = "NSButtonCell"; title = "Fenced code block"; ObjectID = "ELg-sx-vIf"; */
+"ELg-sx-vIf.title" = "代码块";
 
 /* Class = "NSButtonCell"; title = "Underline"; ObjectID = "Gdr-Ro-ZnW"; */
 "Gdr-Ro-ZnW.title" = "下划线";
 
 /* Class = "NSButtonCell"; title = "Strikethrough"; ObjectID = "RjP-zE-c6b"; */
 "RjP-zE-c6b.title" = "删除线";
+
+/* Class = "NSButtonCell"; title = "Autolink"; ObjectID = "Roe-rh-8f9"; */
+"Roe-rh-8f9.title" = "自动链接";
+
+/* Class = "NSBox"; title = "Block formatting"; ObjectID = "TXy-fD-S4Y"; */
+"TXy-fD-S4Y.title" = "块级格式";
+
+/* Class = "NSBox"; title = "Inline formatting"; ObjectID = "Ycc-Px-jbu"; */
+"Ycc-Px-jbu.title" = "内联格式";
+
+/* Class = "NSButtonCell"; title = "Smartypants"; ObjectID = "aSK-nR-xMr"; */
+"aSK-nR-xMr.title" = "Smartypants";
+
+/* Class = "NSButtonCell"; title = "Superscript"; ObjectID = "k2n-VN-cKT"; */
+"k2n-VN-cKT.title" = "上标";
+
+/* Class = "NSBox"; title = "Document formatting"; ObjectID = "x36-52-U0p"; */
+"x36-52-U0p.title" = "文档格式";
+
+/* Class = "NSButtonCell"; title = "Table"; ObjectID = "z8g-3M-hbc"; */
+"z8g-3M-hbc.title" = "表格";
 
