--- a/MacDown/Localization/es.lproj/MPExportPanelAccessoryViewController.strings
+++ b/MacDown/Localization/es.lproj/MPExportPanelAccessoryViewController.strings
@@ -1,1 +1,6 @@
-/* No Localized Strings */
+/* Class = "NSButtonCell"; title = "Include syntax highlighting"; ObjectID = "1f7-JB-VR1"; */
+"1f7-JB-VR1.title" = "Incluir resaltado de sintaxis";
+
+/* Class = "NSButtonCell"; title = "Include styles"; ObjectID = "fod-Ff-UTI"; */
+"fod-Ff-UTI.title" = "Incluir estilos";
+
