--- a/MacDown/Localization/zh-Hant.lproj/MPMarkdownPreferencesViewController.strings
+++ b/MacDown/Localization/zh-Hant.lproj/MPMarkdownPreferencesViewController.strings
@@ -1,6 +1,9 @@
 /* Class = "NSButtonCell"; title = "Underline"; ObjectID = "Gdr-Ro-ZnW"; */
 "Gdr-Ro-ZnW.title" = "底線";
 
+/* Class = "NSButtonCell"; title = "Strikethrough"; ObjectID = "RjP-zE-c6b"; */
+"RjP-zE-c6b.title" = "刪除線";
+
 /* Class = "NSButtonCell"; title = "Superscript"; ObjectID = "k2n-VN-cKT"; */
 "k2n-VN-cKT.title" = "上標";
 
